# FluentAI

./: .gitignore  .pre-commit-config.yaml  AI_FIRST_DESIGN_GUIDE.md  ASYNC_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DESIGN.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION_TO_RUST.md  PERFORMANCE_RESULTS.md  PUSH_SUMMARY.md  PYTHON_RUST_INTEGRATION_STATUS.md  README.md  benchmark.py  benchmark_analysis.py  benchmark_cache.py  benchmark_lists.py  benchmark_native.py  benchmark_native_inline.c  benchmark_simple.py  benchmark_summary.py  benchmark_vm.py  coverage.sh  demo_repl.py  performance_report_rust_migration.md  pyproject.toml  requirements.txt  run_example.py  run_tests.py  setup.py  setup_rust.py  test_advanced_optimizer.py  test_effect_primitives.py  test_effects_repl.py  test_io.py  test_jit.rs  test_map_primitive.py  test_module_parse.py  test_optimizer_debug.py  (+5 more)
benchmarks/: Cargo.toml  benchmark_jit.py
rust/: .gitignore  .tarpaulin.toml  AST_TRANSFORMATION_GUIDE.md  ASYNC_AWAIT_STATUS.md  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  CONTEXTUAL_CODE_MEMORY.md  CONTEXTUAL_CODE_MEMORY_SUMMARY.md  CONTINUUM_STATUS.md  CONTRACT_ENHANCEMENTS.md  Cargo.toml  DOUBLE_NEGATION_ISSUE.md  EFFECT_SYSTEM_SUMMARY.md  FINAL_MIGRATION_REPORT.md  FLC_PARSER_ENHANCEMENTS_SUMMARY.md  FLC_PARSER_FINAL_STATUS.md  FLUENTAI_WASM_INTEGRATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LET_EXPRESSION_BEHAVIOR.md  MIGRATION_SUMMARY.md  Makefile  NETWORK_EFFECTS_PHASE1_SUMMARY.md  NETWORK_EFFECTS_PHASE2_SUMMARY.md  OPTIMIZATIONS.md  OPTIMIZATION_PHASES_SUMMARY.md  RENDERER_IMPROVEMENT_PLAN.md  SDK_ARCHITECTURE.md  TESTS_NEEDING_IMPLEMENTATION.md  TEST_FIX_SUMMARY.md  VM_TESTS_MIGRATION_STATUS.md  actor_model_integration_issue.md  build.sh  build_rs_cov.profraw  coverage-core.json  coverage.json  debug_compile.cl  debug_optimizer.rs  decode_optimization_levels.rs  dynamic_learning_example.rs  dynamic_optimization_design.rs  (+122 more)
rust/.cargo/: config.toml
rust/benchmarks/: Cargo.toml  README.md  compare_performance.py  optimization_benchmark.rs  packet_processing_bench.rs  parser_benchmark.rs  python_stdlib_bench.py  real_performance.rs  realistic_throughput_bench.rs  simd_benchmark.rs  throughput_benchmark.rs  vm_performance.rs
rust/claudelang-cli/: Cargo.toml
rust/claudelang-contracts/: Cargo.toml  README.md
rust/claudelang-core/: Cargo.toml
rust/claudelang-db/: Cargo.toml  README.md
rust/claudelang-di/: Cargo.toml
rust/claudelang-effects/: Cargo.toml
rust/claudelang-interpreter/: Cargo.toml
rust/claudelang-jit/: Cargo.toml
rust/claudelang-lsp/: Cargo.toml
rust/claudelang-mcp/: Cargo.toml  README.md
rust/claudelang-modules/: Cargo.toml  README.md
rust/claudelang-optimizer/: Cargo.toml  README.md
rust/claudelang-package/: Cargo.toml  README.md
rust/claudelang-parser/: Cargo.toml
rust/claudelang-py/: Cargo.toml  build.rs
rust/claudelang-repl/: Cargo.toml
rust/claudelang-stdlib/: Cargo.toml
rust/claudelang-types/: Cargo.toml
rust/claudelang-viz/: Cargo.toml  README.md
rust/claudelang-vm/: Cargo.toml
rust/docs/: AI_FIRST_IMPLEMENTATION_STATUS.md  CLOSURE_IMPLEMENTATION_PLAN.md  FINAL_PERFORMANCE_SUMMARY.md  FLUENTAI_SDK_GUIDE.md  JIT_COMPILER.md  LSP_INTEGRATION.md  MERGE_SUMMARY.md  MODULE_SYSTEM.md  MULTITHREADING_IMPROVEMENTS.md  OPTIMIZATION_SUMMARY.md  PACKAGE_MANAGER.md  PATTERN_MATCHING.md  PERFORMANCE.md  PERFORMANCE_SUMMARY.md  PYTHON_BINDINGS.md  QUICK_TEST_FIXES.md  README.md  STRING_FUNCTIONS_STATUS.md  TEST_COVERAGE_REPORT.md  USAGE_TRACKING.md  VM_PERFORMANCE.md  actor_self_field_access.md  complex_pattern_matching.md  coverage_report_2025_01_07.md  fluentai-stdlib-effects-review.md  http_patterns.md  network_effects.md  network_effects_guide.md  test_async_summary.md  websocket_implementation.md
rust/examples/: Cargo.toml  README.md  RL_OPTIMIZATION_DEMO.md  TEST_RESULTS.md  UPDATED_EXAMPLES.md  WORKING_FEATURES.md  actor_advanced.flc  actor_complete_demo.flc  actor_example.flc  actor_handlers_demo.flc  actor_showcase.flc  actor_simple_test.flc  arithmetic.fc  arithmetic.flc  async_await.ai  async_await_demo.rs  basic_learning_test.rs  concurrent_gc_demo.rs  continuum_compilation_demo.flc  continuum_concept_demo.flc  continuum_demo.flc  continuum_demo_working.flc  continuum_explained.flc  continuum_features_showcase.md  continuum_showcase.flc  continuum_simple_demo.flc  continuum_status.flc  continuum_to_render.flc  continuum_very_simple.flc  convex_hull.flc  database_example.cl  debug_bytecode.rs  debug_closure.cl  debug_compiler.rs  debug_while_bytecode.rs  debug_while_loop.rs  decode_optimization_levels  define_showcase.fl  define_showcase.flc  dependency_injection.rs  (+206 more)
rust/fluentai-actors/: Cargo.toml
rust/fluentai-ai/: Cargo.toml  README.md  RL_DOCUMENTATION.md
rust/fluentai-bytecode/: Cargo.toml
rust/fluentai-cli/: Cargo.toml
rust/fluentai-codegen/: Cargo.toml
rust/fluentai-contracts/: Cargo.toml  README.md  TESTS_SUMMARY.md
rust/fluentai-core/: Cargo.toml
rust/fluentai-core-lib/: Cargo.toml
rust/fluentai-db/: Cargo.toml  README.md  SECURITY.md
rust/fluentai-di/: Cargo.toml  MIGRATION_GUIDE.md
rust/fluentai-doc-macros/: Cargo.toml
rust/fluentai-effects/: Cargo.toml
rust/fluentai-embeddings/: Cargo.toml  test_cosine_sim.rs
rust/fluentai-interpreter/: Cargo.toml
rust/fluentai-jit/: Cargo.toml
rust/fluentai-lint/: Cargo.toml
rust/fluentai-lsp/: Cargo.toml
rust/fluentai-mcp/: Cargo.toml  ENVIRONMENT_VARIABLES.md  README.md  TEST_COVERAGE.md  debug_test.sh  quick_test.sh  test_client.html  test_http_server.sh
rust/fluentai-metaprogramming/: Cargo.toml
rust/fluentai-modules/: Cargo.toml  README.md
rust/fluentai-optimizer/: Cargo.toml  README.md
rust/fluentai-package/: Cargo.toml  README.md
rust/fluentai-parser/: Cargo.toml  FLC_PARSER_TODO.md  README.md
rust/fluentai-py/: Cargo.toml  build.rs  pyproject.toml
rust/fluentai-renderer/: AR_DEMO_README.md  Cargo.toml  DEVTOOLS_GUIDE.md  README.md  README_COMPLETE.md  WASM_QUICK_START.md  WASM_VM_README.md  WASM_VM_TECHNICAL_GUIDE.md  build_3d_demo.sh  (+9 more)
(+1768 files in other folders)
