[package]
name = "claudelang-benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claudelang-core = { path = "../claudelang-core" }
claudelang-parser = { path = "../claudelang-parser" }
claudelang-vm = { path = "../claudelang-vm" }
claudelang-jit = { path = "../claudelang-jit" }
criterion.workspace = true
pprof.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "vm"
harness = false

[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false

[dev-dependencies]