[package]
name = "claudelang-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claudelang"
path = "src/main.rs"

[dependencies]
# Core dependencies
claudelang-core = { path = "../claudelang-core" }
claudelang-parser = { path = "../claudelang-parser" }
claudelang-vm = { path = "../claudelang-vm" }
claudelang-package = { path = "../claudelang-package" }
claudelang-optimizer = { path = "../claudelang-optimizer" }

# Optional visualization
claudelang-viz = { path = "../claudelang-viz", optional = true }

# CLI and async
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }

# Error handling and logging
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
dirs = "5.0"
toml = "0.8"
serde.workspace = true
serde_json.workspace = true
webbrowser = "1.0"

[features]
default = ["visualization"]
visualization = ["claudelang-viz"]

[dev-dependencies]
tempfile = "3.10"