[package]
name = "claudelang-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
claudelang-core = { path = "../claudelang-core" }
claudelang-effects = { path = "../claudelang-effects" }
claudelang-types = { path = "../claudelang-types" }
claudelang-di = { path = "../claudelang-di" }
claudelang-vm = { path = "../claudelang-vm" }

# Database connectivity
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "mysql", "any"] }
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
rustc-hash = "2.0"
indexmap = "2.0"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"