[package]
name = "claudelang-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
claudelang-core = { path = "../claudelang-core" }
claudelang-effects = { path = "../claudelang-effects" }
claudelang-types = { path = "../claudelang-types" }
claudelang-di = { path = "../claudelang-di" }
claudelang-vm = { path = "../claudelang-vm" }

# Database connectivity
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "mysql", "any", "chrono"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
rustc-hash = "2.0"
indexmap = "2.0"
once_cell = "1.19"
uuid = { version = "1.11", features = ["v4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"

[[example]]
name = "transactions"
path = "examples/transactions.rs"

[[example]]
name = "migrations"
path = "examples/migrations.rs"

[[example]]
name = "di_integration"
path = "examples/di_integration.rs"

[[example]]
name = "di_simple"
path = "examples/di_simple.rs"

[[example]]
name = "complete_demo"
path = "examples/complete_demo.rs"