[package]
name = "claudelang-di"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"

# Type system dependencies
downcast-rs = "1.2"
parking_lot = "0.12"

# Configuration support
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }

# Async support
tokio = { version = "1.35", features = ["rt", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = []
config = ["serde", "serde_json", "toml"]
async = ["tokio", "async-trait"]

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "test-util"] }
