[package]
name = "claudelang-effects"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
claudelang-core = { path = "../claudelang-core" }
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
anyhow.workspace = true
thiserror.workspace = true
dashmap = "5.5"
rand = "0.8"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.11", features = ["v4"] }
serde_json = "1.0"
parking_lot = "0.12"

# Optional dependencies
claudelang-di = { path = "../claudelang-di", optional = true }

[features]
default = []
di = ["claudelang-di"]

[[example]]
name = "custom_handlers"
path = "examples/custom_handlers.rs"

[[example]]
name = "di_integration"
path = "examples/di_integration.rs"
required-features = ["di"]
