[package]
name = "claudelang-interpreter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
claudelang-core = { path = "../claudelang-core" }
claudelang-stdlib = { path = "../claudelang-stdlib" }
claudelang-types = { path = "../claudelang-types" }
claudelang-effects = { path = "../claudelang-effects" }
claudelang-modules = { path = "../claudelang-modules" }
claudelang-contracts = { path = "../claudelang-contracts" }

# Data structures
rustc-hash = "2.0"
indexmap = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
tracing = "0.1"
once_cell = "1.19"

# Async support
tokio = { version = "1.35", features = ["rt", "macros", "sync", "time"] }
async-trait = { version = "0.1" }

[dev-dependencies]
claudelang-parser = { path = "../claudelang-parser" }
proptest = "1.4"
criterion = "0.5"

[features]
default = []
debug = []
jit = []

[[bench]]
name = "interpreter_bench"
harness = false
