[package]
name = "claudelang-jit"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claudelang-core = { path = "../claudelang-core" }
claudelang-vm = { path = "../claudelang-vm" }
claudelang-parser = { path = "../claudelang-parser" }
cranelift = "0.104"
cranelift-codegen = "0.104"
cranelift-module = "0.104"
cranelift-jit = "0.104"
cranelift-native = "0.104"
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "jit_benchmarks"
harness = false