[package]
name = "claudelang-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claudelang-core = { path = "../claudelang-core" }
claudelang-parser = { path = "../claudelang-parser" }
claudelang-vm = { path = "../claudelang-vm" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
ropey.workspace = true
tracing.workspace = true
dashmap = "5.5"
tracing-subscriber = "0.3"

[[bin]]
name = "claudelang-lsp"
path = "src/main.rs"