[package]
name = "claudelang-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
claudelang-core = { path = "../claudelang-core" }
claudelang-parser = { path = "../claudelang-parser" }
claudelang-vm = { path = "../claudelang-vm" }
claudelang-stdlib = { path = "../claudelang-stdlib" }

# MCP and async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[[bin]]
name = "claudelang-mcp"
path = "src/main.rs"