[package]
name = "claudelang-optimizer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
claudelang-core = { path = "../claudelang-core" }
claudelang-parser = { path = "../claudelang-parser" }
claudelang-types = { path = "../claudelang-types" }
rustc-hash = "2.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "optimizer_benchmark"
harness = false
