[package]
name = "claudelang-package"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
claudelang-core = { path = "../claudelang-core" }
claudelang-modules = { path = "../claudelang-modules" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
rustc-hash = { workspace = true }
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
tokio = { version = "1", features = ["fs", "io-util"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5.0"
toml = "0.8"
flate2 = "1.0"
tar = "0.4"
tracing-subscriber = { workspace = true }
tempfile = "3.8"

[dev-dependencies]
mockall = "0.11"

[[bin]]
name = "claudelang"
path = "src/bin/main.rs"
