[package]
name = "claudelang-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claudelang-core = { path = "../claudelang-core" }
anyhow.workspace = true
thiserror.workspace = true
logos.workspace = true
rustc-hash.workspace = true
bumpalo.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
pretty_assertions = "1.3"

[[bench]]
name = "parser_bench"
harness = false