[package]
name = "claudelang-repl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
claudelang-core = { path = "../claudelang-core" }
claudelang-parser = { path = "../claudelang-parser" }
claudelang-interpreter = { path = "../claudelang-interpreter" }
claudelang-vm = { path = "../claudelang-vm" }
claudelang-optimizer = { path = "../claudelang-optimizer" }

# Terminal UI
crossterm = "0.28"
rustyline = { version = "14.0", features = ["derive"] }
rustyline-derive = "0.10"
syntect = "5.0"
colored = "2.0"

# Async runtime
tokio = { version = "1.35", features = ["rt", "macros", "io-std", "io-util"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
dirs = "5.0"
chrono = "0.4"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "claudelang-repl"
path = "src/bin/main.rs"
