[package]
name = "claudelang-stdlib"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
claudelang-core = { path = "../claudelang-core" }
# Remove VM dependency to avoid cyclic dependency
# We'll move the Value type to a shared crate later
claudelang-effects = { path = "../claudelang-effects" }
anyhow = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
parking_lot = { workspace = true }
chrono = "0.4"
serde_json = { workspace = true }
rand = "0.8"
once_cell = "1.19"

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.0"

[[bench]]
name = "stdlib_benchmarks"
harness = false