[package]
name = "claudelang-viz"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
claudelang-core = { path = "../claudelang-core" }
claudelang-vm = { path = "../claudelang-vm" }
claudelang-parser = { path = "../claudelang-parser" }

# Web server dependencies
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rustc-hash = "1.1"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"

[dev-dependencies]