[package]
name = "claudelang-vm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claudelang-core = { path = "../claudelang-core" }
claudelang-effects = { path = "../claudelang-effects" }
claudelang-stdlib = { path = "../claudelang-stdlib" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
byteorder.workspace = true
rustc-hash.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
criterion.workspace = true
claudelang-parser = { path = "../claudelang-parser" }

[[example]]
name = "test_vm"
path = "../examples/test_vm.rs"

[[example]]
name = "real_performance"
path = "../examples/real_performance.rs"

[[example]]
name = "test_async_runtime"
path = "../examples/test_async_runtime.rs"

[[example]]
name = "test_async_basic"
path = "../examples/test_async_basic.rs"

[[example]]
name = "test_effects_basic"
path = "../examples/test_effects_basic.rs"

[[example]]
name = "test_async_ready"
path = "../examples/test_async_ready.rs"

[[example]]
name = "test_effects_demo"
path = "../examples/test_effects_demo.rs"

[[example]]
name = "test_simple_effect"
path = "../examples/test_simple_effect.rs"

[[example]]
name = "test_effects_working"
path = "../examples/test_effects_working.rs"

[[example]]
name = "test_closure_capture"
path = "../examples/test_closure_capture.rs"

[[example]]
name = "test_simple_closure"
path = "../examples/test_simple_closure.rs"

[[example]]
name = "test_scoped_lookup"
path = "../examples/test_scoped_lookup.rs"

[[example]]
name = "test_scope_issue"
path = "../examples/test_scope_issue.rs"

[[example]]
name = "test_compiler_debug"
path = "../examples/test_compiler_debug.rs"

[[example]]
name = "test_nested_closure"
path = "../examples/test_nested_closure.rs"

[[example]]
name = "test_nested_closure_detailed"
path = "../examples/test_nested_closure_detailed.rs"

[[example]]
name = "test_let_positions"
path = "../examples/test_let_positions.rs"

[[example]]
name = "test_step3_only"
path = "../examples/test_step3_only.rs"

[[example]]
name = "test_step4_only"
path = "../examples/test_step4_only.rs"

[[example]]
name = "test_debug_stack"
path = "../examples/test_debug_stack.rs"

[[example]]
name = "test_minimal_closure"
path = "../examples/test_minimal_closure.rs"

[[example]]
name = "test_letrec"
path = "../examples/test_letrec.rs"

[[example]]
name = "test_simple_recursion"
path = "../examples/test_simple_recursion.rs"

[[example]]
name = "test_simple_letrec"
path = "../examples/test_simple_letrec.rs"

[[example]]
name = "test_pattern_matching"
path = "../examples/test_pattern_matching.rs"

[[example]]
name = "test_simple_match"
path = "../examples/test_simple_match.rs"

[[example]]
name = "test_match_debug"
path = "../examples/test_match_debug.rs"

[[example]]
name = "test_pattern_edge_cases"
path = "../examples/test_pattern_edge_cases.rs"

[[example]]
name = "test_load_store"
path = "../examples/test_load_store.rs"

[[example]]
name = "test_cell_simple"
path = "../examples/test_cell_simple.rs"

[[example]]
name = "test_cell_debug"
path = "../examples/test_cell_debug.rs"

[[example]]
name = "test_recursive_debug"
path = "../examples/test_recursive_debug.rs"

[[example]]
name = "test_nested_scopes"
path = "../examples/test_nested_scopes.rs"

[[example]]
name = "test_list_operations"
path = "../examples/test_list_operations.rs"

[[example]]
name = "test_list_debug"
path = "../examples/test_list_debug.rs"

[[example]]
name = "test_fast_locals"
path = "../examples/test_fast_locals.rs"

[[example]]
name = "test_constructors"
path = "../examples/test_constructors.rs"

[[example]]
name = "test_simple_constructor"
path = "../examples/test_simple_constructor.rs"

[[example]]
name = "test_stdlib"
path = "../examples/test_stdlib.rs"