[package]
name = "fluentai-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentai-core = { path = "../fluentai-core" }
fluentai-parser = { path = "../fluentai-parser" }
fluentai-vm = { path = "../fluentai-vm" }
fluentai-optimizer = { path = "../fluentai-optimizer" }
fluentai-stdlib = { path = "../fluentai-stdlib" }
anyhow = "1.0"

[[bin]]
name = "test_cons_nil_patterns"
path = "test_cons_nil_patterns.rs"