[package]
name = "fluentai-actors"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentai-core = { path = "../fluentai-core" }
fluentai-vm = { path = "../fluentai-vm" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.0"
rustc-hash = "2.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
pin-project = "1"
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

# [[bench]]
# name = "actor_bench"
# harness = false