[package]
name = "fluentai-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fluentai"
path = "src/main.rs"

[dependencies]
fluentai-bytecode = { path = "../fluentai-bytecode" }
# Core dependencies
fluentai-core = { path = "../fluentai-core" }
fluentai-parser = { path = "../fluentai-parser" }
fluentai-vm = { path = "../fluentai-vm" }
fluentai-package = { path = "../fluentai-package" }
fluentai-optimizer = { path = "../fluentai-optimizer" }
fluentai-core-lib = { path = "../fluentai-core-lib" }

# Optional visualization
fluentai-viz = { path = "../fluentai-viz", optional = true }

# CLI and async
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }

# Error handling and logging
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
dirs = "5.0"
toml = "0.8"
serde.workspace = true
serde_json.workspace = true
webbrowser = "1.0"
colored = "2.0"
indicatif = "0.17"
zip = "0.6"
chrono = "0.4"
tempfile = "3.8"

[features]
default = ["visualization"]
visualization = ["fluentai-viz"]

[dev-dependencies]
tempfile = "3.10"
